# Wox

./: .cursorrules  .editorconfig  .flutter-master-commit  .gitattributes  .gitignore  .lefthook.yml  .leu  .swift-format  AGENTS.md  CHANGELOG.md  CLAUDE.md  ISSUE_TEMPLATE.md  LICENSE  Makefile  README.md  Saber.sln  SolutionAssemblyInfo.cs  Wox.2010.sln  Wox.code-workspace  Wox.sln  Wox.sln.DotSettings  ai_prompt_i18n.txt  appveyor.yml  crowdin.yml  design-qa.md  findings.md  git-commit.mdc  justfile  llm-store.json  package-lock.json  package.json  plugin-store.json  progress.md  store-ai-command.json  store-plugin.json  store-theme.json  task_plan.md  test.spec  theme-store.json  updater.beta.json  (+1 more)
.config/: dotnet-tools.json
.github/: dependabot.yml
.husky/: pre-commit  prepare-commit-msg  task-runner.json
Assets/: Info.plist  app.go
CI/: go.mod  plugin.go
Doc/: Plugin.json.md  Plugin.md  Query.md  Setting.md
JsonRPC/: wox.py
Scripts/: post_build.ps1  saber.nuspec  wox.nuspec  wox.plugin.nuspec  wox_uninstaller.bat
Wox/: ActionKeywords.xaml  ActionKeywords.xaml.cs  App.axaml  App.axaml.cs  App.config  App.xaml.cs  CustomPluginHotkeySetting.xaml.cs  CustomQueryHotkeySetting.xaml  CustomQueryHotkeySetting.xaml.cs  Hotkey.xaml  Hotkey.xaml.cs  HotkeyControl.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Msg.xaml  Msg.xaml.cs  Program.cs  PublicAPIInstance.cs  ReportWindow.xaml  (+22 more)
Wox.Core/: ActionContext.cs  ChineseToPinYin.cs  Const.cs  DataLocation.cs  FuzzyMatcher.cs  GlobalHotkey.cs  HotkeyModel.cs  HttpRequest.cs  PeHeaderReader.cs  Query.cs  QueryBuilder.cs  README.md  Result.cs  SpecialKeyState.cs  Unidecoder.Characters.cs  Unidecoder.cs  Updater.cs  WindowsShellRun.cs  Wox.Core.csproj
Wox.Core.Data/: BaseStorage.cs  UserSelectedRecordStorage.cs  Wox.Core.Data.csproj
Wox.CrashReporter/: Wox.CrashReporter.csproj
Wox.Infrastructure/: Alphabet.cs  Constant.cs  FileSystemEnumerable.cs  FilesFolders.cs  FuzzyMatcher.cs  KeyboardLayout.cs  Stopwatch.cs  StringMatcher.cs  Wox.Infrastructure.csproj  Wox.cs
Wox.Installer/: Bundle.wxs  InstallerTheme.xml  Wox.Installer.wixproj  before_build.ps1  post_build.ps1  squirrel_nuget.ps1  wox.nuspec  wox.plugin.nuspec
Wox.Plugin/: ActionContext.cs  AllowedLanguage.cs  ArrayExtensions.cs  BaseModel.cs  Feature.cs  IPlugin.cs  IPublicAPI.cs  ISystemPlugin.cs  PluginInitContext.cs  PluginMetadata.cs  PluginPair.cs  Query.cs  README.md  Result.cs  Wox.Plugin.csproj  WoxImage.cs
Wox.Plugin.Host.Nodejs/: .babelrc  .eslintrc  package.json  pnpm-lock.yaml  tsconfig.json
Wox.Plugin.Host.Python/: Makefile  README.md  __main__.py  constants.py  host.py  jsonrpc.py  logger.py  main.py  plugin_api.py  plugin_manager.py  pyproject.toml  requirements.txt  wox.py
Wox.Plugin.Nodejs/: package.json  pnpm-lock.yaml  tsconfig.json
Wox.Plugin.Python/: Makefile  README.md  plugin.py  publish.py  publish.sh  pyproject.toml  setup.py
Wox.Plugin.SystemPlugins/: BaseSystemPlugin.cs  BrowserBookmarks.cs  Calculator.cs  Sys.cs  ThirdpartyPluginIndicator.cs  UrlPlugin.cs  Wox.Plugin.SystemPlugins.csproj  Wox.Plugins.System.csproj
Wox.Plugins/: AllowedLanguage.cs  BaseSystemPlugin.cs  IPlugin.cs  ISettingProvider.cs  ISystemPlugin.cs  PluginInitContext.cs  PluginMetadata.cs  PluginPair.cs  PluginType.cs  PythonResult.cs  Wox.Plugin.csproj  Wox.Plugins.csproj
Wox.Plugins.Internal/: BrowserBookmarks.cs  Sys.cs  ThirdpartyPluginIndicator.cs  UrlPlugin.cs  Wox.Plugins.Internal.csproj  packages.config
Wox.Plugins.System/: BaseSystemPlugin.cs  BrowserBookmarks.cs  Calculator.cs  Sys.cs  ThirdpartyPluginIndicator.cs  UrlPlugin.cs  Wox.Plugins.System.csproj
Wox.Test/: App.config  FuzzyMatcherTest.cs  PluginManagerTest.cs  PluginProgramTest.cs  QueryBuilderTest.cs  QueryTest.cs  UrlPluginTest.cs  Wox.Test.csproj
Wox.Tests/: FuzzyMatcherTest.cs  QueryTests.cs  Wox.Tests.csproj
Wox.UAC/: FileTypeAssociateInstaller.cs  Wox.UAC.csproj  packages.config
Wox.UI.Electron/: main.js  package.json  pnpm-lock.yaml  preload.js  vite.config.ts
Wox.UI.React/: .gitignore  .prettierrc.json  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
Wox.UI.Tauri/: .gitignore  index.html  package.json  pnpm-lock.yaml  setting.html  vite.config.ts
Wox.UI.Tauri/src-tauri/: Cargo.toml  tauri.conf.json
Wox.UI.Tauri/src-tauri/src/: main.rs  spotlight.rs  websocket.rs
Wox.Ui.Reacts/: package.json
Wox.UpdateFeedGenerator/: Wox.UpdateFeedGenerator.csproj
wox.plugin.host.python/: .python-version  Makefile  pyproject.toml
wox.plugin.host.python/src/wox_plugin_host/: __init__.py  __main__.py  constants.py  host.py  jsonrpc.py  logger.py  plugin_api.py  plugin_manager.py
wox.plugin.python/: Makefile  README.md  pyproject.toml
wox.plugin.python/src/wox_plugin/: __init__.py  api.py  exceptions.py  plugin.py  py.typed  types.py
wox.plugin.python/src/wox_plugin/models/: ai.py  attention.py  context.py  image.py  log.py  mru.py  preview.py  query.py  query_response.py  result.py  setting.py  settings.py  toolbar_msg.py
wox.plugin.python/src/wox_plugin/utils/: helpers.py
wox.ui.flutter/wox/windows/runner/wox_webview/: CMakeLists.txt  README.md  graphics_context.cc  graphics_context.h  texture_bridge.cc  texture_bridge.h  texture_bridge_fallback.cc  texture_bridge_fallback.h  texture_bridge_gpu.cc  texture_bridge_gpu.h  webview.cc  webview.h  webview_bridge.cc  webview_bridge.h  webview_host.cc  webview_host.h  webview_platform.cc  webview_platform.h  webview_windows_plugin.cc  wox_webview_plugin.h
wox.ui.flutter/wox/windows/runner/wox_webview/include/webview_windows/: webview_windows_plugin.h
wox.ui.flutter/wox/windows/runner/wox_webview/util/: composition.desktop.interop.h  d3dutil.h  direct3d11.interop.cc  direct3d11.interop.h  rohelper.cc  rohelper.h  string_converter.cc  string_converter.h  swizzle.h
wox.ui.flutter/wox/windows/runner/wox_webview/util/cpuid/: cpuinfo.cc  cpuinfo.h
wox.ui.flutter/wox/windows/runner/wox_webview/util/cpuid/detail/: cpuinfo_impl.h  extract_x86_flags.h  init_msvc_x86.h  init_unknown.h
(+2927 files in other folders)
