[project]
name = "wox-plugin-host"
version = "0.0.1"
description = "Python host for Wox plugins"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0"
authors = [{ name = "Wox Team", email = "qianlifeng@gmail.com" }]
dependencies = ["loguru", "websockets", "wox-plugin"]

[tool.uv.sources]
# Host builds must use the in-repo SDK so protocol and model changes are validated before SDK releases.
wox-plugin = { path = "../wox.plugin.python" }

[project.scripts]
run = "wox_plugin_host.__main__:run"

[project.optional-dependencies]
dev = ["shiv", "ruff", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 140
