[package]
name = "wox"
version = "2.0.0"
description = "A cross-platform launcher that simply works"
authors = ["Wox Team"]
license = "MIT"
repository = "https://github.com/Wox-launcher/Wox"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5.2", features = ["macos-private-api", "shell-open", "window-all", "app-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simplelog = "^0.12.1"
dirs = "2.0"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
