[package]
name = "wox"
version = "2.0.0"
description = "A cross-platform launcher that simply works"
authors = ["Wox Team"]
license = "MIT"
repository = "https://github.com/Wox-launcher/Wox"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["macos-private-api", "shell-open", "window-all", "app-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simplelog = "^0.12.1"
dirs = "2.0"
time = { version = "0.3", features = ["macros"] }
tungstenite = "0.20.1"
url = "2.4.1"
sysinfo = "0.29.10"
reqwest = { version = "0.11", features = ["blocking", "json"] }
ajson = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel" }
window-vibrancy = "0.4.2"

[target.'cfg(target_os = "windows")'.dependencies]
window-vibrancy = "0.4.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
